@@ -22,7 +22,7 @@ exportMethods(
     ## Accessors
     alphabet, letter,
     nview, start, end, width, desc, "desc<-", subject,
-    pids, p2start, p2end, p2nview,
+    pids, p2start, p2end, p2nview, unlist,
     subpatterns, pattern,
     align1, align2, score,
 
