@@ -15,7 +15,8 @@ o matchPDict() now returns a P2Views object (new class) instead of a list
   of integer vectors. The user can then extract the starts or the ends of
   the matches with p2start() or p2end(), extract the number of matches per
   pattern with p2nview(), extract the matches for a given pattern with [[,
-  or convert it into a set of views on the original subject with
+  put all the matches in a single Views object with unlist() or convert
+  the P2Views object into a set of views on the original subject with
   extractAllMatches().
   Other functions can be added later in order to provide a wider choice of
   extraction/conversion tools if necessary.
